fixed layout bugs

--- a/private/public/css/style.css
+++ b/private/public/css/style.css
@@ -214,6 +214,7 @@ section {
     transition: all .5s;
     padding: 2rem;
     position: absolute;
+    overflow-y: scroll;
     right: -50%;
     width: 250px;
     height: 300px;
@@ -230,6 +231,7 @@ section {
     right: 0;
     width: 250px;
     height: 300px;
+    overflow-y: scroll;
     background-color: #F6F6F6;
    filter: drop-shadow(0px 4px 21px rgba(0, 0, 0, 0.15));
    -webkit-filter: drop-shadow(0px 4px 21px rgba(0, 0, 0, 0.15));
@@ -723,7 +725,6 @@ margin-bottom: 40px;
         margin-bottom: 2rem;
         margin-top: 1rem;
     }
-    
     
 }
 #tagItem {
